1.20cvs

* Turning on signal checking may slow things down too much. So off
  by default. Fix bug in "set sigcheck". Add --sigcheck option.

* Allow a thread number in "info thread" and "frame" commands if 
  Python 2.5 or threadframe.

* Show all threads even if we don't know their names.

1.19 2006-10-27

* info threads: merge in terse display (Python 2.5, threadframe)
  and sort by thread name (Python 2.5)

* Add optional position argument on "continue" command.

* Add pydb.runl() and pydb.runv() forms to facilitate debugging a
  program from inside a Python shell.

* fix thread bugs: on startup with threading we stopped one statement
  too soon. more careful about storing into variables used in
  threading which are not locked (and so could be changed during a
  thread switch)

* Allow quit in thread debugging when MainThread is the only thread
  that we are in

* fix bugs in signal handling. 

* Add "stack" and "nostack" to list of things that can be done when
  a signal is received.

* things to make more ipython friendly.

* Improve pydb manual

1.18 2006-09-25

* Start thread debugging: 
    info thread [thread-name] [terse|verbose]    - show thread info
    qt                                     - quit current thread
    can set a breakpoint on a specific thread name.
  expand definitions of "frame" and "break" for threading

* GDB-like signal handling. Some code based on Matt Fleming's 2006
  Summer-of-Code project. Gdb's "handle" and "signal" commands.

* Add hard kill. May be needed for thread debugging.

* Fix bug in handling temporary breakpoints (tbreak) caused by the
  difference in semantics between pdb's 'clear' command and pdb's
  (which calls this 'delete' and has a different meaning for 'clear').

* 'examine' command now shows object's instance variables.

* add gdb 'FILE' command: allow loading/running a file from within
  pydb. (The old pydb from ddd had it too.)

1.17 2006-07-29
* Allow entry to the debugger without a script name.
