@@ -24,4 +24,5 @@ No current source file.
 The program being debugged is not being run.
 No Python program loaded.
 No Python program registered.
+Perhaps you want to use the 'file' command?
 No stack.
